--- a/src/assets/_card.scss
+++ b/src/assets/_card.scss
@@ -15,27 +15,25 @@
       position: relative;
       flex: 1 0 0%;
       margin-bottom: 0;
-      flex-direction: column;
       margin-right: 15px;
       margin-bottom: 0;
       margin-left: 15px;
-      height: 100%;
       min-width: 0;
     }
   }
 
   .deck {
-    display: flex;
-    flex-flow: row wrap;
-    margin-right: -15px;
-    margin-left: -15px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+    gap: 30px;
+    align-items: stretch;
 
     > .card {
-      flex: 1 0 0%;
+      display: flex;
       flex-direction: column;
-      margin-right: 15px;
       margin-bottom: 0;
-      margin-left: 15px;
+      height: 100%;
+      min-width: 0;
     }
   }
 
